force-app/main/default/objects/Flight__c/fields/Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrival Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights as Arrival Airport</relationshipLabel>
    <relationshipName>Rel_Arrival_Flights</relationshipName>
    <type>Lookup</type>
</CustomField>