force-app/main/default/objects/Flight__c/fields/Arrival_IATA__c.field-meta.xml
<CustomField>
    <fullName>Arrival_IATA__c</fullName>
    <formula>Arrival_Airport__r.IATA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrival IATA</label>
    <type>Text</type>
</CustomField>