force-app/main/default/objects/Flight__c/fields/Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights as Departure Airport</relationshipLabel>
    <relationshipName>Rel_Departure_Airport</relationshipName>
    <type>Lookup</type>
</CustomField>