force-app/main/default/objects/Flight__c/fields/Departure_IATA__c.field-meta.xml
<CustomField>
    <fullName>Departure_IATA__c</fullName>
    <formula>Departure_Airport__r.IATA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure IATA</label>
    <type>Text</type>
</CustomField>