force-app/main/default/objects/Flight__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <description>Describe the distance in kilometers between the departure and the arrival airports.</description>
    <inlineHelpText>Describe the distance in kilometers between the departure and the arrival airports.</inlineHelpText>
    <label>Distance (km)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>